# phreeqc

./: .gitignore  CLAUDE.md  CMakeLists.txt  MANIFEST.in  README.md  cmake.patch  conanfile.txt  import_dev.py  playground.py  prepare.sh  pyproject.toml  requirements.txt  setup.py  test.py  test_bin.py
.circleci/: config.yml
.github/actions/setup-deps/: action.yaml
.github/actions/update-version/: action.yaml
.github/workflows/: ci.yaml  publish.yaml  release.yaml  test-pypi.yaml
custom-overlay/iphreeqc/: portfile.cmake  usage  vcpkg.json
scripts/: download_databases.py  prepare.sh  update-version.py
src/: bindings.cc  main.cpp
src/phreeqc/: __init__.py  __init__.pyi
src/phreeqc-stubs/: __init__.pyi
tests/: test_dummy.py  test_ex.py
